:fire: removed files, put config instead of file. :art: removed clutter code, adding support for margin, padding, text-overflow :bug: fix word-break property :sparkles: adding new support for all possible state on utilities

--- a/scss/utilities/utilities.scss
+++ b/scss/utilities/utilities.scss
@@ -1,5 +1,7 @@
 // ==========  Utilities  ========== //
 
+$allowed-state: ("active", "checked", "disabled", "even-child", "first-child", "focus", "focus-within", "focus-visible", "group-hover", "group-focus", "hover", "last-child", "odd-child", "visited");
+
 @function responsive-flag($config, $name, $breakpoints) {
   $flag: "";
 
@@ -24,7 +26,11 @@
   );
 }
 
-@mixin default-test-1($infix, $property, $values, $class) {
+@function state-flag($state) {
+  @return if($state, index($allowed-state, $state) != null, false);
+}
+
+@mixin build-utility($infix, $property, $values, $class) {
   @each $name, $value in $values {
     .#{$class}-#{$name}#{$infix} {
       #{$property}: $value;
@@ -32,7 +38,20 @@
   }
 }
 
-@mixin utility($values, $property, $class, $responsive: false) {
+@mixin build-utility-state($infix, $property, $values, $class, $states) {
+  @each $state in $states {
+    $is-valid-state: state-flag($state);
+    @if $is-valid-state {
+      @each $name, $value in $values {
+        .#{$class}-#{$name}#{$infix}\:#{$state}:#{$state} {
+          #{$property}: $value;
+        }
+      }
+    }
+  }
+}
+
+@mixin utility($values, $property, $class, $responsive: false, $states: false) {
   @each $breakpoint in map-keys($grid-breakpoints) {
     @include media-breakpoint-up($breakpoint) {
       $infix: breakpoint-infix($breakpoint, $grid-breakpoints);
@@ -43,7 +62,12 @@
       );
 
       @if $responsive-flag {
-        @include default-test-1($infix, $property, $values, $class);
+        @include build-utility($infix, $property, $values, $class);
+
+        @if $states {
+          @include build-utility-state($infix, $property, $values, $class, $states);
+        }
+
       }
     }
   }
@@ -59,7 +83,8 @@
     $responsive: map-get($utility, "responsive");
     $values: map-get($utility, "values");
     $class: map-get($utility, "class");
+    $states: map-get($utility, "states");
 
-    @include utility($values, $key, $class, $responsive);
+    @include utility($values, $key, $class, $responsive, $states);
   }
 }
